<resources>
    <string name="app_name">校漾</string>
    <string name="playmate">找玩伴</string>
    <string name="sale">物品转手</string>
    <string name="broadcast">发公告</string>
    <string name="out">我的发布</string>

    <string name="playTogether">一起嗨</string>
    <string name="notice">公告板</string>
    <string name="activityNews">活动资讯</string>
    <string name="flea">跳蚤市场</string>

    <string name="simple">简述</string>
    <string name="theme">主题</string>
    <string name="time">时间</string>
    <string name="place">地点</string>
    <string name="intro">简介</string>
    <string name="introduce">详细描述</string>
    <string name="connect">联系方式</string>

    <string name="submit">提交</string>

    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="category">分类:</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>


    <!-- Strings related to login -->

    <string name="female">女</string>
    <string name="male">男</string>

    <string name="hint_user">用户名</string>
    <string name="hint_password">密码</string>
    <string name="login">登陆</string>
    <string name="forgetPwd">忘记密码</string>
    <string name="register">立即注册</string>

    <string name="appName">校漾</string>
    <string name="welcome">让你我更接近</string>

    <string name="club">社团活动</string>
    <string name="publicGood">公益活动</string>
    <string name="smallActivity">自组织活动</string>

    <string name="exit">退出</string>
    <string name="prompt">提示</string>
    <string name="sure_exit">确定要退出吗？</string>

    <string name="camera">拍照</string>
    <string name="gallery">图库</string>
    <string name="timestamp">yyyyMMddHHmmss</string>
    <string name="timestamp1">yyy-MM-dd HH:mm:ss</string>


    <string name="recycle">回收站</string>
    <string name="findbook">找书</string>
    <string name="findexam">寻考点</string>
    <string name="findother">瞎看看</string>

    <string name="waitData">请稍等...</string>
    <string name="netFailed">网络请求失败，请重试！</string>

    <string name="startime">开始时间</string>
    <string name="sep">--</string>
    <string name="endtime">结束时间</string>

    <string name="fleaName">部门名称：%1$s</string>
    <string name="fleaPlace">地 &quot; &quot;&quot; &quot;&quot; &quot;&quot; &quot;&quot; &quot;点：%1$s</string>
    <string name="fleaTime">时 &quot; &quot;&quot; &quot;&quot; &quot;&quot; &quot;&quot; &quot;间：%1$s</string>
    <string name="fleaDetail">详细描述：%1$s</string>
    <string name="fleaConnect">联系方式：%1$s</string>




    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string-array name="categorys">
        <item>图书</item>
        <item>衣物饰品</item>
        <item>其他</item>
    </string-array>


</resources>
