<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".leftmenu.PublishInfoActivity">

    <include layout="@layout/actionbar" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/briefIntro"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/simple" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:hint="@string/place">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/place"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/connect"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/connect" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:id="@+id/time"
                    android:hint="@string/time"
                    android:layout_height="match_parent" />

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/spinnerLayout"
        android:visibility="gone"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:layout_margin="5dp"
            />
        <Spinner
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/category"
            android:spinnerMode="dropdown"
            android:layout_margin="5dp"
            android:entries="@array/categorys"
            />

    </LinearLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:drawableLeft="@drawable/intro"
                android:text="@string/intro" />

            <EditText
                android:id="@+id/introduce"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_margin="10dp"
                android:background="@drawable/shape_roundrec"
                android:gravity="top"
                android:hint="@string/introduce"
                android:lines="3"
                android:padding="2dp" />

        </LinearLayout>

    </android.support.v7.widget.CardView>


    <Button
        android:id="@+id/sure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/shape_roundrec_solide"
        android:text="@string/sure"
        android:textColor="@android:color/white" />


</LinearLayout>
