<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.xll.administrator.leftmenu.OutThingsActivity">

    <include
        layout="@layout/actionbar"
        />

    <android.support.v7.widget.CardView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/briefIntro"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/simple" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:id="@+id/connect"
                    android:hint="@string/connect"
                    android:layout_height="match_parent" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>


        </android.support.v7.widget.CardView>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:layout_margin="5dp"
            />
        <Spinner
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/category"
           android:spinnerMode="dropdown"
            android:layout_margin="5dp"
            android:entries="@array/categorys"
            />

    </LinearLayout>

    <EditText
        android:layout_margin="10dp"
        android:layout_height="120dp"
        android:layout_width="match_parent"
        android:lines="3"
        android:padding="2dp"
        android:gravity="top"
        android:id="@+id/introduce"
        android:hint="@string/introduce"
        android:background="@drawable/shape_roundrec"
        />
    <ImageView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/img"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/submit"
        android:text="@string/submit"
        android:layout_margin="10dp"
        />


</LinearLayout>
