<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.xll.administrator.ui.FragmentPlayTogether">

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        >

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/club"
            android:id="@+id/tvClub"
            android:visibility="gone"

            />

        <android.support.v7.widget.RecyclerView
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:id="@+id/rvClub"
            android:paddingBottom="10dp"
            />
        <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/publicGood"
            android:id="@+id/tvPublic"
            android:visibility="gone"
        />

        <android.support.v7.widget.RecyclerView
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:id="@+id/rvPublic"
            android:paddingBottom="10dp"
            />


        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/smallActivity"
            android:id="@+id/tvSmall"
            android:visibility="gone"
            />

        <android.support.v7.widget.RecyclerView
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:id="@+id/rvSmall"
            android:paddingBottom="20dp"
            />

        </LinearLayout>




</android.support.v4.widget.NestedScrollView>
